fix jumping on clickj

--- a/website/src/components/checkboxGroup/styles.module.css
+++ b/website/src/components/checkboxGroup/styles.module.css
@@ -29,7 +29,8 @@
 .viewMoreButton {
   background: none;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1rem;
+  margin-bottom: .75rem;
   border: none;
   text-decoration: underline;
   color: var(--ifm-font-color-base);
@@ -42,7 +43,7 @@
 }
 
 .buttonContainer {
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -51,7 +52,7 @@
 .selectAllButton {
   background: none;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 1rem;
   border: none;
   text-decoration: underline;
   color: var(--ifm-font-color-base);
